--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -24,6 +24,9 @@ disabled = false
 format = "[$path]($style) "
 style = "cyan"
 truncate_to_repo = false
+truncation_symbol = ""
+truncation_length = 4
+fish_style_pwd_dir_length = 1
 disabled = false
 
 [git_branch]
