--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -4,7 +4,7 @@ add_newline = false
 
 [time]
 format = "[\\[$time\\]]($style) "
-style = "purple"
+style = "dimmed purple"
 disabled = false
 
 [username]
