--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -169,7 +169,7 @@ font:
   #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
-#draw_bold_text_with_bright_colors: false
+#draw_bold_text_with_bright_colors: *nord
 
 # COLORS
 
@@ -237,9 +237,9 @@ nord: &nord
     matches:
       foreground: CellBackground
       background: '#88c0d0'
-    bar:
-      background: '#434c5e'
-      foreground: '#d8dee9'
+  footer_bar:
+    background: '#434c5e'
+    foreground: '#d8dee9'
   normal:
     black: '#3b4252'
     red: '#bf616a'
@@ -268,7 +268,7 @@ nord: &nord
     cyan: '#6d96a5'
     white: '#aeb3bb'
 
-colors: *farout
+colors: *nord
 
 # Visual Bell
 #
