--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -169,7 +169,7 @@ font:
   #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
-#draw_bold_text_with_bright_colors: *nord
+#draw_bold_text_with_bright_colors: *farout
 
 # COLORS
 
@@ -221,54 +221,54 @@ farout: &farout
 
 nord: &nord
   primary:
-    background: '#3b4252'
-    foreground: '#d8dee9'
-    dim_foreground: '#a5abb6'
+    background: '#3B4252'
+    foreground: '#D8DEE9'
+    dim_foreground: '#A5ABB6'
   cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
+    text: CellBackground
+    cursor: CellForeground
   vi_mode_cursor:
-    text: '#2e3440'
+    text: '#2E3440'
     cursor: '#d8dee9'
   selection:
-    text: CellForeground
-    background: '#4c566a'
+    text: CellBackground
+    background: CellForeground
   search:
     matches:
       foreground: CellBackground
-      background: '#88c0d0'
+      background: '#88C0D0'
   footer_bar:
-    background: '#434c5e'
-    foreground: '#d8dee9'
+    background: '#434C5E'
+    foreground: '#D8DEE9'
   normal:
-    black: '#3b4252'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#88c0d0'
-    white: '#e5e9f0'
+    black: '#3B4252'
+    red: '#BF616A'
+    green: '#A3BE8C'
+    yellow: '#EBCB8B'
+    blue: '#81A1C1'
+    magenta: '#B48EAD'
+    cyan: '#88C0D0'
+    white: '#E5E9F0'
   bright:
-    black: '#4c566a'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#8fbcbb'
-    white: '#eceff4'
+    black: '#4C566A'
+    red: '#BF616A'
+    green: '#A3BE8C'
+    yellow: '#EBCB8B'
+    blue: '#81A1C1'
+    magenta: '#B48EAD'
+    cyan: '#8FBCBB'
+    white: '#ECEFF4'
   dim:
-    black: '#373e4d'
-    red: '#94545d'
+    black: '#373E4D'
+    red: '#94545D'
     green: '#809575'
-    yellow: '#b29e75'
-    blue: '#68809a'
-    magenta: '#8c738c'
-    cyan: '#6d96a5'
-    white: '#aeb3bb'
+    yellow: '#B29E75'
+    blue: '#68809A'
+    magenta: '#8C738C'
+    cyan: '#6D96A5'
+    white: '#AEB3BB'
 
-colors: *nord
+colors: *farout
 
 # Visual Bell
 #
