[farout] update Xresources + fix alacritty colors

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -200,15 +200,15 @@ farout: &farout
     magenta: '#AA6B73'
     cyan: '#C69478'
     white: '#F2DDBC'
-  # bright:
-  #   black: '#4c566a'
-  #   red: '#bf616a'
-  #   green: '#a3be8c'
-  #   yellow: '#ebcb8b'
-  #   blue: '#81a1c1'
-  #   magenta: '#b48ead'
-  #   cyan: '#8fbcbb'
-  #   white: '#eceff4'
+  bright:
+    black: '#1F1311'
+    red: '#DF674C'
+    green: '#C4A98F'
+    yellow: '#FFC786'
+    blue: '#F49D69'
+    magenta: '#AA6B73'
+    cyan: '#C69478'
+    white: '#F2DDBC'
   dim:
     black: '#0F0908'
     red: '#BF472C'
