[alacritty] add font size anchors

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -137,7 +137,9 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 8
+  size_4k: &size_4k 12
+  size_regular: &size_regular 8
+  size: *size_4k
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
