--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,9 @@ bind j select-pane -D;
 bind k select-pane -U;
 bind l select-pane -R;
 
+# Select last pane
+bind-key -n M-Space select-pane -l;
+
 # Set tmux to Vi mode
 set-window-option -g mode-keys vi;
 
@@ -34,5 +37,4 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 
 # Set tmux color
-# set -g default-terminal "alacritty"
 set-option -ga terminal-overrides ",alacritty:Tc"
