--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,10 @@ set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
+# Pane appearance
+set -g pane-border-style fg=cyan dim
+set -g pane-active-border-style fg=cyan dim
+
 # Neovim recommendation
 set-option -sg escape-time 10
 set-option -g focus-events on
