--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,8 +29,8 @@ set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Pane appearance
-set -g pane-border-style fg=cyan dim
-set -g pane-active-border-style fg=cyan dim
+set -g pane-border-style fg='cyan dim'
+set -g pane-active-border-style fg='cyan dim'
 
 # Neovim recommendation
 set-option -sg escape-time 10
