--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,4 +1,4 @@
-format = """(none)${custom.time}$cmd_duration$username$hostname $directory$git_branch$git_status$git_state$character"""
+format = """${custom.time}$cmd_duration$username$hostname $directory$git_branch$git_status$git_state$character"""
 
 add_newline = false
 command_timeout = 800
@@ -53,7 +53,7 @@ style = "bold red"
 disabled = false
 
 [custom.time]
-command = "date format %H:%M:%S"
+command = "date now | date format %H:%M:%S"
 when = "$env.CMD_DURATION_MS | into int | if $in > 2 { ^true } else { ^false }"
 format = "[(\\[$output\\])]($style) "
 style = "bold purple"
