--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,8 @@ bind k select-pane -U;
 bind l select-pane -R;
 
 # Select last pane
-bind-key -n M-Space select-pane -l;
+# bind-key -n M-Space select-pane -l;
+bind-key -n M-Space run-shell "zellij --session pde action focus-next-pane";
 
 # Set tmux to Vi mode
 set-window-option -g mode-keys vi;
