--- a/leftwm/themes/farout/picom.conf
+++ b/leftwm/themes/farout/picom.conf
@@ -31,7 +31,7 @@ round-borders-exclude = [
   "window_type = 'dnd'"
 ];
 round-borders-rule = [
-  "15:class_g     = 'Alacritty'",
+  "15:class_g     = 'Wezterm'",
 ];
 
 #################################
