--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-### NEOVIM
-packer_compiled.lua
-
 ### VIM FILES
 # Swap
 [._]*.s[a-v][a-z]
@@ -20,4 +17,5 @@ tags
 # Persistent undo
 [._]*.un~
 
-history.txt
+# macOS
+.DS_Store
