--- a/.config/aerospace/aerospace-studio.toml
+++ b/.config/aerospace/aerospace-studio.toml
@@ -107,86 +107,44 @@ automatically-unhide-macos-hidden-apps = true
     alt-comma = 'layout accordion horizontal vertical'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-    alt-h = 'focus left'
-    alt-j = 'focus down'
-    alt-k = 'focus up'
-    alt-l = 'focus right'
+    alt-ctrl-shift-h = 'focus left'
+    alt-ctrl-shift-j = 'focus down'
+    alt-ctrl-shift-k = 'focus up'
+    alt-ctrl-shift-l = 'focus right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move
-    alt-ctrl-h = 'move left'
-    alt-ctrl-j = 'move down'
-    alt-ctrl-k = 'move up'
-    alt-ctrl-l = 'move right'
+    cmd-alt-ctrl-shift-h = 'move left'
+    cmd-alt-ctrl-shift-j = 'move down'
+    cmd-alt-ctrl-shift-k = 'move up'
+    cmd-alt-ctrl-shift-l = 'move right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-    alt-minus = 'resize smart -50'
-    alt-equal = 'resize smart +50'
+    alt-ctrl-shift-minus = 'resize smart -50'
+    alt-ctrl-shift-equal = 'resize smart +50'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-    alt-a = 'workspace 1'
-    alt-s = 'workspace 2'
-    alt-d = 'workspace 3'
-    alt-f = 'workspace 4'
-    # alt-5 = 'workspace 5'
-    # alt-6 = 'workspace 6'
-    # alt-7 = 'workspace 7'
-    # alt-8 = 'workspace 8'
-    # alt-9 = 'workspace 9'
-    # alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-    # alt-b = 'workspace B'
-    # alt-c = 'workspace C'
-    # alt-d = 'workspace D'
-    # alt-e = 'workspace E'
-    # alt-f = 'workspace F'
-    # alt-g = 'workspace G'
-    # alt-i = 'workspace I'
-    # alt-m = 'workspace M'
-    # alt-n = 'workspace N'
-    # alt-o = 'workspace O'
-    # alt-p = 'workspace P'
-    # alt-q = 'workspace Q'
-    # alt-r = 'workspace R'
-    # alt-s = 'workspace S'
-    # alt-t = 'workspace T'
-    # alt-u = 'workspace U'
-    # alt-v = 'workspace V'
-    # alt-w = 'workspace W'
-    # alt-x = 'workspace X'
-    # alt-y = 'workspace Y'
-    # alt-z = 'workspace Z'
+    alt-ctrl-shift-a = 'workspace 1'
+    alt-ctrl-shift-s = 'workspace 2'
+    alt-ctrl-shift-d = 'workspace 3'
+    alt-ctrl-shift-f = 'workspace 4'
+    alt-ctrl-shift-g = 'workspace 5'
+    alt-ctrl-shift-q = 'workspace 7'
+    alt-ctrl-shift-w = 'workspace 7'
+    alt-ctrl-shift-e = 'workspace 8'
+    alt-ctrl-shift-r = 'workspace 9'
+    alt-ctrl-shift-t = 'workspace 10'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-    alt-ctrl-a = 'move-node-to-workspace 1 --focus-follows-window'
-    alt-ctrl-s = 'move-node-to-workspace 2 --focus-follows-window'
-    alt-ctrl-d = 'move-node-to-workspace 3 --focus-follows-window'
-    alt-ctrl-f = 'move-node-to-workspace 4 --focus-follows-window'
-    # alt-shift-5 = 'move-node-to-workspace 5'
-    # alt-shift-6 = 'move-node-to-workspace 6'
-    # alt-shift-7 = 'move-node-to-workspace 7'
-    # alt-shift-8 = 'move-node-to-workspace 8'
-    # alt-shift-9 = 'move-node-to-workspace 9'
-    # alt-shift-a = 'move-node-to-workspace A'
-    # alt-shift-b = 'move-node-to-workspace B'
-    # alt-shift-c = 'move-node-to-workspace C'
-    # alt-shift-d = 'move-node-to-workspace D'
-    # alt-shift-e = 'move-node-to-workspace E'
-    # alt-shift-f = 'move-node-to-workspace F'
-    # alt-shift-g = 'move-node-to-workspace G'
-    # alt-shift-i = 'move-node-to-workspace I'
-    # alt-shift-m = 'move-node-to-workspace M'
-    # alt-shift-n = 'move-node-to-workspace N'
-    # alt-shift-o = 'move-node-to-workspace O'
-    # alt-shift-p = 'move-node-to-workspace P'
-    # alt-shift-q = 'move-node-to-workspace Q'
-    # alt-shift-r = 'move-node-to-workspace R'
-    # alt-shift-s = 'move-node-to-workspace S'
-    # alt-shift-t = 'move-node-to-workspace T'
-    # alt-shift-u = 'move-node-to-workspace U'
-    # alt-shift-v = 'move-node-to-workspace V'
-    # alt-shift-w = 'move-node-to-workspace W'
-    # alt-shift-x = 'move-node-to-workspace X'
-    # alt-shift-y = 'move-node-to-workspace Y'
-    # alt-shift-z = 'move-node-to-workspace Z'
+    cmd-alt-ctrl-shift-a = 'move-node-to-workspace 1 --focus-follows-window'
+    cmd-alt-ctrl-shift-s = 'move-node-to-workspace 2 --focus-follows-window'
+    cmd-alt-ctrl-shift-d = 'move-node-to-workspace 3 --focus-follows-window'
+    cmd-alt-ctrl-shift-f = 'move-node-to-workspace 4 --focus-follows-window'
+    cmd-alt-ctrl-shift-g = 'move-node-to-workspace 5 --focus-follows-window'
+    cmd-alt-ctrl-shift-q = 'move-node-to-workspace 6 --focus-follows-window'
+    cmd-alt-ctrl-shift-w = 'move-node-to-workspace 7 --focus-follows-window'
+    cmd-alt-ctrl-shift-e = 'move-node-to-workspace 8 --focus-follows-window'
+    cmd-alt-ctrl-shift-r = 'move-node-to-workspace 9 --focus-follows-window'
+    cmd-alt-ctrl-shift-t = 'move-node-to-workspace 10 --focus-follows-window'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
     alt-tab = 'workspace-back-and-forth'
